--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
     implementation "com.aallam.openai:openai-client:3.2.0"
     implementation 'androidx.security:security-crypto:1.1.0-alpha05'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4"
+    implementation "io.ktor:ktor-client-core:2.2.4"
+    implementation "io.ktor:ktor-client-android:2.2.4"
 }
