--- a/build.gradle
+++ b/build.gradle
@@ -3,10 +3,12 @@ buildscript {
     repositories {
         mavenCentral()
         google()
+        gradlePluginPortal()
     }
 
     dependencies {
         classpath "io.gitlab.arturbosch.detekt:detekt-gradle-plugin:1.22.0"
+        classpath "com.github.ben-manes:gradle-versions-plugin:0.46.0"
     }
 }
 
@@ -15,3 +17,5 @@ plugins {
     id 'com.android.library' version '8.0.0' apply false
     id 'org.jetbrains.kotlin.android' version '1.8.0' apply false
 }
+
+apply plugin: "com.github.ben-manes.versions"
